# EFI

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Includes/: EFI.h
Includes/EFI/: ConfigurationTable.h  Entry.h  Memory.h  Status.h  Time.h  Types.h
Includes/EFI/Protocols/: DevicePath.h  TextInput.h  TextOutput.h
Includes/EFI/Services/: ABI.h  Boot.h  Runtime.h
Sources/: Main.c
